Progress all around
-cmds file, where commands are described in plain text

-hopefully a _temporary_ parser for the cmds file..

-cmd control separated from the main context

-possible to save the buffer to a file

-small log library included

--- a/src/Makefile
+++ b/src/Makefile
@@ -17,6 +17,8 @@ sources = \
 	input_cmd.c \
 	buffer.c \
 	list.c \
+	cmdlib.c \
+	log.c \
 
 OBJS = $(sources:%.c=$(obj_dir)%.o)
 deps = $(sources:%.c=$(deps_dir)%.d)
